kcp/loadbalancer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: confluent-gateway-switchover-lb
  namespace: confluent
  labels:
    app: confluent-gateway-common
spec:
  type: LoadBalancer
  selector:
    app: confluent-gateway-cp
    platform.confluent.io/type: gateway
  ports:
    - name: kafka-bootstrap
      port: 9595
      targetPort: 9595
    - name: kafka-broker-0
      port: 9596
      targetPort: 9596
    - name: kafka-broker-1
      port: 9597
      targetPort: 9597
    - name: kafka-broker-2
      port: 9598
      targetPort: 9598
    - name: kafka-broker-3
      port: 9599
      targetPort: 9599
    - name: kafka-broker-4
      port: 9600
      targetPort: 9600
    - name: kafka-broker-5
      port: 9601
      targetPort: 9601
    - name: kafka-broker-6
      port: 9602
      targetPort: 9602
    - name: kafka-broker-7
      port: 9603
      targetPort: 9603
    - name: kafka-broker-8
      port: 9604
      targetPort: 9604
    - name: kafka-broker-9
      port: 9605
      targetPort: 9605
    - name: kafka-broker-10
      port: 9606
      targetPort: 9606
    - name: kafka-broker-11
      port: 9607
      targetPort: 9607
